--- a/test/src/main/java/uks/debuggen/party/events/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/party/events/classModel.yaml
@@ -1,5 +1,5 @@
 - c: 	org.fulib.classmodel.ClassModel
-  classes: 	event 	dataEvent 	serviceSubscribed 	command 	loginCommand 	loginSucceededEvent
+  classes: 	event 	dataEvent 	dataGroup 	query 	serviceSubscribed 	command 	getUserNameCommand 	getEmailCommand 	getPasswordCommand 	userBuilt 	loginSucceededEvent 	getPartyCommand
   defaultCollectionType: 	c1
   defaultPropertyStyle: 	Bean
   defaultRoleType: 	"java.util.ArrayList<%s>"
@@ -13,7 +13,7 @@
   modified: 	false
   name: 	Event
   propertyStyle: 	Bean
-  subClasses: 	dataEvent 	serviceSubscribed 	command 	loginSucceededEvent
+  subClasses: 	dataEvent 	query 	serviceSubscribed 	command 	loginSucceededEvent
 
 - dataEvent: 	org.fulib.classmodel.Clazz
   attributes: 	dataEvent_blockId
@@ -21,6 +21,25 @@
   modified: 	false
   name: 	DataEvent
   propertyStyle: 	Bean
+  roles: 	dataEvent_sagas 	dataEvent_query
+  subClasses: 	dataGroup 	userBuilt
+  superClass: 	event
+
+- dataGroup: 	org.fulib.classmodel.Clazz
+  model: 	c
+  modified: 	false
+  name: 	DataGroup
+  propertyStyle: 	Bean
+  roles: 	dataGroup_elements
+  superClass: 	dataEvent
+
+- query: 	org.fulib.classmodel.Clazz
+  attributes: 	query_key
+  model: 	c
+  modified: 	false
+  name: 	Query
+  propertyStyle: 	Bean
+  roles: 	query_results
   superClass: 	event
 
 - serviceSubscribed: 	org.fulib.classmodel.Clazz
@@ -36,16 +55,39 @@
   modified: 	false
   name: 	Command
   propertyStyle: 	Bean
-  subClasses: 	loginCommand
+  subClasses: 	getUserNameCommand 	getEmailCommand 	getPasswordCommand 	getPartyCommand
   superClass: 	event
 
-- loginCommand: 	org.fulib.classmodel.Clazz
-  attributes: 	loginCommand_name
+- getUserNameCommand: 	org.fulib.classmodel.Clazz
+  attributes: 	getUserNameCommand_name
   model: 	c
   modified: 	false
-  name: 	LoginCommand
+  name: 	GetUserNameCommand
   propertyStyle: 	Bean
   superClass: 	command
+
+- getEmailCommand: 	org.fulib.classmodel.Clazz
+  attributes: 	getEmailCommand_email
+  model: 	c
+  modified: 	false
+  name: 	GetEmailCommand
+  propertyStyle: 	Bean
+  superClass: 	command
+
+- getPasswordCommand: 	org.fulib.classmodel.Clazz
+  model: 	c
+  modified: 	false
+  name: 	GetPasswordCommand
+  propertyStyle: 	Bean
+  superClass: 	command
+
+- userBuilt: 	org.fulib.classmodel.Clazz
+  attributes: 	userBuilt_name 	userBuilt_email 	userBuilt_password
+  model: 	c
+  modified: 	false
+  name: 	UserBuilt
+  propertyStyle: 	Bean
+  superClass: 	dataEvent
 
 - loginSucceededEvent: 	org.fulib.classmodel.Clazz
   attributes: 	loginSucceededEvent_name
@@ -54,6 +96,14 @@
   name: 	LoginSucceededEvent
   propertyStyle: 	Bean
   superClass: 	event
+
+- getPartyCommand: 	org.fulib.classmodel.Clazz
+  attributes: 	getPartyCommand_party
+  model: 	c
+  modified: 	false
+  name: 	GetPartyCommand
+  propertyStyle: 	Bean
+  superClass: 	command
 
 - c1: 	org.fulib.classmodel.CollectionType
   implClass: 	class java.util.ArrayList
@@ -80,6 +130,61 @@
   type: 	String
   typeSignature: 	String
 
+- dataEvent_sagas: 	org.fulib.classmodel.AssocRole
+  aggregation: 	false
+  cardinality: 	42
+  clazz: 	dataEvent
+  collectionType: 	c1
+  id: 	DataEvent_sagas
+  modified: 	false
+  name: 	sagas
+  other: 	dataGroup_elements
+  propertyStyle: 	Bean
+  roleType: 	"java.util.ArrayList<%s>"
+
+- dataEvent_query: 	org.fulib.classmodel.AssocRole
+  aggregation: 	false
+  cardinality: 	1
+  clazz: 	dataEvent
+  id: 	DataEvent_query
+  modified: 	false
+  name: 	query
+  other: 	query_results
+  propertyStyle: 	Bean
+
+- dataGroup_elements: 	org.fulib.classmodel.AssocRole
+  aggregation: 	false
+  cardinality: 	42
+  clazz: 	dataGroup
+  collectionType: 	c1
+  id: 	DataGroup_elements
+  modified: 	false
+  name: 	elements
+  other: 	dataEvent_sagas
+  propertyStyle: 	Bean
+  roleType: 	"java.util.ArrayList<%s>"
+
+- query_key: 	org.fulib.classmodel.Attribute
+  clazz: 	query
+  id: 	Query_key
+  modified: 	false
+  name: 	key
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- query_results: 	org.fulib.classmodel.AssocRole
+  aggregation: 	false
+  cardinality: 	42
+  clazz: 	query
+  collectionType: 	c1
+  id: 	Query_results
+  modified: 	false
+  name: 	results
+  other: 	dataEvent_query
+  propertyStyle: 	Bean
+  roleType: 	"java.util.ArrayList<%s>"
+
 - serviceSubscribed_serviceUrl: 	org.fulib.classmodel.Attribute
   clazz: 	serviceSubscribed
   id: 	ServiceSubscribed_serviceUrl
@@ -89,11 +194,47 @@
   type: 	String
   typeSignature: 	String
 
-- loginCommand_name: 	org.fulib.classmodel.Attribute
-  clazz: 	loginCommand
-  id: 	LoginCommand_name
+- getUserNameCommand_name: 	org.fulib.classmodel.Attribute
+  clazz: 	getUserNameCommand
+  id: 	GetUserNameCommand_name
   modified: 	false
   name: 	name
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- getEmailCommand_email: 	org.fulib.classmodel.Attribute
+  clazz: 	getEmailCommand
+  id: 	GetEmailCommand_email
+  modified: 	false
+  name: 	email
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- userBuilt_name: 	org.fulib.classmodel.Attribute
+  clazz: 	userBuilt
+  id: 	UserBuilt_name
+  modified: 	false
+  name: 	name
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- userBuilt_email: 	org.fulib.classmodel.Attribute
+  clazz: 	userBuilt
+  id: 	UserBuilt_email
+  modified: 	false
+  name: 	email
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- userBuilt_password: 	org.fulib.classmodel.Attribute
+  clazz: 	userBuilt
+  id: 	UserBuilt_password
+  modified: 	false
+  name: 	password
   propertyStyle: 	Bean
   type: 	String
   typeSignature: 	String
@@ -103,6 +244,15 @@
   id: 	LoginSucceededEvent_name
   modified: 	false
   name: 	name
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- getPartyCommand_party: 	org.fulib.classmodel.Attribute
+  clazz: 	getPartyCommand
+  id: 	GetPartyCommand_party
+  modified: 	false
+  name: 	party
   propertyStyle: 	Bean
   type: 	String
   typeSignature: 	String
