--- a/test/src/gen/resources/workflows/PartyWorkflow.es.yaml
+++ b/test/src/gen/resources/workflows/PartyWorkflow.es.yaml
@@ -1,6 +1,20 @@
 
+# ==================================================
 - board: PartyApp
 
+- workflow: overview
+
+- event: user registered 12:00
+
+- event: login succeeded 13:00
+
+- event: party created 14:00
+
+- event: item booked 15:00
+
+- event: saldi computed 16:00
+
+# =====================================================
 - workflow: register new user
 
 - action: Alice
@@ -51,7 +65,10 @@
   email: a@b.de
   password: secret
 
-- event: login succeeded 12:10
+- event: user registered 12:10
+  name: Alice
+
+- event: login succeeded 12:11
   name: Alice
 
 - action: Alice
